tests/baselines/reference/discriminatedUnionErrorMessage.errors.txt
tests/cases/compiler/discriminatedUnionErrorMessage.ts(10,5): error TS2322: Type '{ kind: "sq"; x: number; y: number; }' is not assignable to type 'Shape'.
  Object literal may only specify known properties, and 'x' does not exist in type 'Square'.


==== tests/cases/compiler/discriminatedUnionErrorMessage.ts (1 errors) ====
    type Square = { kind: "sq", size: number }
    type Rectangle = { kind: "rt", x: number, y: number }
    type Circle = { kind: "cr", radius: number }
    type Shape =
        | Square
        | Rectangle
        | Circle;
    let shape: Shape = {
        kind: "sq",
        x: 12,
        ~~~~~
!!! error TS2322: Type '{ {|kind|0|}: "sq"; {|x|1|}: number; {|y|2|}: number; }' is not assignable to type '{|Shape|3|}'.
!!! error TS2322:   Object literal may only specify known properties, and 'x' does not exist in type 'Square'.
!!! annotated symbol 0 tests/cases/compiler/discriminatedUnionErrorMessage.ts:9:5
!!! annotated symbol 1 tests/cases/compiler/discriminatedUnionErrorMessage.ts:10:5
!!! annotated symbol 2 tests/cases/compiler/discriminatedUnionErrorMessage.ts:11:5
!!! annotated symbol 3 tests/cases/compiler/discriminatedUnionErrorMessage.ts:4:6
        y: 13,
    }
    